2011-09-13  Antti Koivisto  <antti@apple.com>

        Move identifier filter from CSSStyleSelector to SelectorChecker
        https://bugs.webkit.org/show_bug.cgi?id=68025

        Reviewed by Sam Weinig.

        This is a more logical place for this code. It also makes CSSStyleSelector slightly less bloated. 
        It will make it possible to use fastRejectSelector for querySelectorAll in the future.

        * css/CSSStyleSelector.cpp:
        (WebCore::loadViewSourceStyle):
        (WebCore::CSSStyleSelector::matchRulesForList):
        (WebCore::RuleData::RuleData):
        * css/CSSStyleSelector.h:
        (WebCore::CSSStyleSelector::pushParent):
        (WebCore::CSSStyleSelector::popParent):
        * css/SelectorChecker.cpp:
        (WebCore::collectElementIdentifierHashes):
        (WebCore::SelectorChecker::pushParentStackFrame):
        (WebCore::SelectorChecker::popParentStackFrame):
        (WebCore::SelectorChecker::pushParent):
        (WebCore::SelectorChecker::popParent):
        (WebCore::collectDescendantSelectorIdentifierHashes):
        (WebCore::SelectorChecker::collectIdentifierHashes):
        * css/SelectorChecker.h:
        (WebCore::SelectorChecker::parentStackIsConsistent):
        (WebCore::SelectorChecker::ParentStackFrame::ParentStackFrame):
        (WebCore::SelectorChecker::fastRejectSelector):

2011-09-13  Kiyoto Tamura  <owenestea@gmail.com>

        For compatibility, execCommand should support deprecated 'useCSS' alias for 'styleWithCSS'
        https://bugs.webkit.org/show_bug.cgi?id=36683

        Reviewed by Ryosuke Niwa.

        In addition to supporting the deprecated 'useCSS', 'styleWithCSS' now accepts any argument other than
        the boolean false or the case-insensitive string "false". This is per
        http://aryeh.name/spec/editing/editing.html#the-stylewithcss-command

        Tests: editing/execCommand/style-with-css.html
               editing/execCommand/use-css.html

        * editing/EditorCommand.cpp: