@@ -1,3 +1,10 @@
+2011-09-13  Beth Dakin  <bdakin@apple.com>
+
+        Adding a comment I forgot to add before.
+
+        * rendering/RenderImage.cpp:
+        (WebCore::RenderImage::imageSizeForError):
+
 2011-09-13  Antti Koivisto  <antti@apple.com>
 
         Move identifier filter from CSSStyleSelector to SelectorChecker
